package pt.ipp.isep.dei.auth;

import java.util.List;

// TODO: Check if this should extend/use pt.isep.lei.esoft.auth.domain.model.UserSession
public class UserSession {
    public List<Object> getUserRoles() { // TODO: Define Role class/enum
        // TODO: Implement logic
        throw new UnsupportedOperationException("Not implemented yet.");
    }
    // Add other session related methods
}
