package pt.ipp.isep.dei.dto;

public class IndustryTypeDTO {
    public IndustryTypeDTO() { throw new UnsupportedOperationException("Not implemented yet"); }
    public String name;
    public double productionRate;
    public double consumptionRate;
}
