package pt.ipp.isep.dei.repository;

import pt.ipp.isep.dei.domain.scenario.Industry;

/**
 * Repository for Industry operations
 */
public class IndustryRepository {

    public IndustryRepository() {
    }

    /**
     * Saves an industry
     */
    public void saveIndustry(Industry industry) {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}