package pt.ipp.isep.dei.service;


import pt.ipp.isep.dei.auth.UserSession;

public class AuthenticationService {
    public UserSession getCurrentUserSession() {
        throw new UnsupportedOperationException("Not implemented yet.");
    }
}
