package pt.ipp.isep.dei.ui;

public class AddIndustryUI {
    public AddIndustryUI() {
    }

     /**
     * Shows available maps
     */
    public void showAvailableMap() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    public void showIndustryTypes() {
        throw new UnsupportedOperationException("Not implemented yet.");
    }

    public void showIndustrySubtypes(String type) {
        throw new UnsupportedOperationException("Not implemented yet.");
    }

    public void requestCoordinates() {
        throw new UnsupportedOperationException("Not implemented yet.");
    }
}
